- Added JWT authentication to app - Updated Routes to require authentication for handlers - Clean up of mock data - Added security annotations to Swagger
