# routers/player.go
@@ -4,11 +4,12 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/nmcalinden/footpal/config"
 	"github.com/nmcalinden/footpal/controllers"
+	"github.com/nmcalinden/footpal/middleware"
 	"github.com/nmcalinden/footpal/services"
 )
 
 func ConfigurePlayerHandlers(app *fiber.App) {
-	group := app.Group("/players")
+	group := app.Group("/players", middleware.IsAuthenticated)
 
 	pService := services.NewPlayerService(config.GetConnection())
 	playerController := controllers.NewPlayerController(pService)
